--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "eslint-loader": "2.0.0",
     "eslint-plugin-vue": "4.7.1",
     "eventsource-polyfill": "0.9.6",
+    "express": "^4.16.4",
     "file-loader": "1.1.11",
     "friendly-errors-webpack-plugin": "1.7.0",
     "html-webpack-plugin": "4.0.0-alpha",
+    "http-proxy-middleware": "^0.19.0",
     "mini-css-extract-plugin": "0.4.1",
     "node-notifier": "5.2.1",
     "node-sass": "^4.7.2",
